--- a/data-collector/Dockerfile
+++ b/data-collector/Dockerfile
@@ -1,1 +1,13 @@
+FROM python:3.9-slim
 
+WORKDIR /app
+
+# Install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the application
+COPY . .
+
+# Run the application
+CMD ["python", "collect_data.py"]
